# python-logging

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
tests/: test_all.py  test_jsonlogger.py  test_trustpilot_json_logging.py
trustpilot_json_logging/: __init__.py  jsonlogger.py
trustpilot_logging/: __init__.py  jsonlogger.py
